update navbar logo

--- a/index.html
+++ b/index.html
@@ -610,7 +610,9 @@
     <!-- Header -->
     <header class="header">
         <div class="header-content">
-            <div class="logo"></div>
+            <div class="logo">
+  <img src="images/calyai-logo.jpg" alt="CalyAI Logo"">
+</div>
             <a href="#final-cta" class="cta-button">Get Early Access</a>
         </div>
     </header>
