update logo sizing

--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
     <header class="header">
         <div class="header-content">
             <div class="logo">
-  <img src="images/calyai-logo.jpg" alt="CalyAI Logo"">
+  <img src="images/calyai-logo.jpg" alt="CalyAI Logo" style="height: 100px;" style="width: 76px;">
 </div>
             <a href="#final-cta" class="cta-button">Get Early Access</a>
         </div>
