add video to hero section

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             overflow: hidden;
         }
 
-        .hero-image {
+        . {
             width: 380px;
             height: 684px;
             background: url('https://placehold.co/380x684') no-repeat center;
@@ -634,7 +634,10 @@
                 </div>
             </div>
             <div class="hero-right">
-                <div class="hero-image"></div>
+                <video width="100%" autoplay muted loop playsinline>
+  <source src="calyai-demo.mp4" type="video/mp4">
+  Your browser doesn't support video.
+</video>
             </div>
         </div>
     </section>
