--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
             </div>
             <div class="hero-right">
                 <video width="100%" autoplay muted loop playsinline>
-  <source src="calyai-demo.mp4" type="video/mp4">
+  <source src="images/calyai-demo.mp4" type="video/mp4">
   Your browser doesn't support video.
 </video>
             </div>
