--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                 </div>
             </div>
             <div class="hero-right">
-    <video width="380" height="684" autoplay muted loop playsinline webkit-playsinline preload="auto">
+    <video width="380" height="684" controls muted loop playsinline webkit-playsinline>
     <source src="images/calyai-demo.mp4" type="video/mp4">
     Your browser doesn't support video.
     </video>
