test video safari

--- a/index.html
+++ b/index.html
@@ -645,10 +645,9 @@
                 </div>
             </div>
             <div class="hero-right">
-    <video width="380" height="684" controls muted loop playsinline webkit-playsinline>
-    <source src="images/calyai-demo.mp4" type="video/mp4">
-    Your browser doesn't support video.
-    </video>
+    <video width="380" height="684" controls>
+    <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+</video>
 </div>
         </div>
     </section>
