--- a/index.html
+++ b/index.html
@@ -645,8 +645,9 @@
                 </div>
             </div>
             <div class="hero-right">
-    <video width="380" height="684" controls>
-    <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+    <video width="380" height="684" autoplay muted loop playsinline webkit-playsinline preload="auto">
+    <source src="images/calyai-demo.mp4" type="video/mp4">
+    Your browser doesn't support video.
 </video>
 </div>
         </div>
