--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
             </div>
             <div class="hero-right">
     <video width="380" height="684" autoplay muted loop playsinline webkit-playsinline preload="auto">
-    <source src="calyai-demo.mp4" type="video/mp4">
+    <source src="images/calyai-demo.mp4" type="video/mp4">
     Your browser doesn't support video.
 </video>
 </div>
