--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
         <div class="task-content">
             <div class="task-video">
                 <video autoplay muted loop playsinline webkit-playsinline preload="auto">
-                    <source src="images/calyai-video.mp4" type="video/mp4">
+                    <source src="images/calyai-task.mp4" type="video/mp4">
                     Your browser doesn't support video.
                 </video>
             </div>
@@ -714,7 +714,7 @@
             </div>
             <div class="schedules-video">
                 <video autoplay muted loop playsinline webkit-playsinline preload="auto">
-                    <source src="images/calyai-task.mp4" type="video/mp4">
+                    <source src="images/calyai-meeting.mp4" type="video/mp4">
                     Your browser doesn't support video.
                 </video>
             </div>
