--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             width: 100%;
             max-width: 320px;
             height: auto;
-            max-height: 500px;
+            max-height: 550px;
             border-radius: 20px;
             object-fit: contain;
         }
@@ -279,13 +279,14 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            border-radius: 20px;
         }
 
         .task-video video {
             width: 100%;
             max-width: 320px;
             height: auto;
-            max-height: 500px;
+            max-height: 550px;
             border-radius: 20px;
             object-fit: contain;
         }
@@ -425,13 +426,14 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            border-radius: 20px;
         }
 
         .schedules-video video {
             width: 100%;
             max-width: 320px;
             height: auto;
-            max-height: 500px;
+            max-height: 550px;
             border-radius: 20px;
             object-fit: contain;
         }
@@ -587,6 +589,7 @@
                 max-width: 100%;
                 width: 280px;
                 max-height: 350px;
+                border-radius: 20px;
             }
             
             .form-row, .final-form-row {
