--- a/index.html
+++ b/index.html
@@ -658,13 +658,13 @@
         <div class="hero-content">
             <div class="hero-left">
                 <div class="hero-text">
-                    <h1 class="hero-title">CalyAI Your Personal Assistant for Scheduling</h1>
-                    <p class="hero-subtitle">Tired of scheduling your meetings, reminders, & task? CalyAI takes care of that for you, just one chat away</p>
+                    <h1 class="hero-title">Let CalyAI Handle Your Scheduling</h1>
+                    <p class="hero-subtitle">Meetings, reminders, grocery runs, just type it once CalyAI handles the rest!</p>
                 </div>
                 <div class="hero-form">
                     <div class="form-row">
-                        <input type="email" id="hero-email" class="email-input" placeholder="Type your email here" required>
-                        <button type="submit" class="submit-button" onclick="submitEmail('hero-email', 'hero-message')">Submit</button>
+                        <input type="email" id="hero-email" class="email-input" placeholder="Enter your email to join early access." required>
+                        <button type="submit" class="submit-button" onclick="submitEmail('hero-email', 'hero-message')">Get Started</button>
                     </div>
                     <div id="hero-message" class="message"></div>
                 </div>
