--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
             <div class="hero-left">
                 <div class="hero-text">
                     <h1 class="hero-title">Let CalyAI Handle Your Scheduling</h1>
-                    <p class="hero-subtitle">Meetings, reminders, grocery runs, just type it once CalyAI handles the rest!</p>
+                    <p class="hero-subtitle">Meetings, reminders, tasks, just type it once CalyAI handles the rest!</p>
                 </div>
                 <div class="hero-form">
                     <div class="form-row">
@@ -702,8 +702,8 @@
             </div>
             <div class="task-text">
                 <div class="task-info">
-                    <h2 class="task-title">Task Reminders</h2>
-                    <p class="task-description">CalyAI assists you no matter what you need from grocery shopping, taking medicine, or going to gym.</p>
+                    <h2 class="task-title">Task Reminders, Never Miss a Thing!</h2>
+                    <p class="task-description">Whether it's hitting the gym, taking your meds, or grabbing groceries just tell CalyAI, and its done.</p>
                 </div>
                 <a href="#final-cta" class="task-button">Get Early Access</a>
             </div>
