--- a/index.html
+++ b/index.html
@@ -702,8 +702,8 @@
             </div>
             <div class="task-text">
                 <div class="task-info">
-                    <h2 class="task-title">Task Reminders, Never Miss a Thing!</h2>
-                    <p class="task-description">Whether it's hitting the gym, taking your meds, or grabbing groceries just tell CalyAI, and its done.</p>
+                    <h2 class="task-title">Task Reminders - Never Miss a Thing!</h2>
+                    <p class="task-description">Whether it's hitting the gym, taking your meds, or running errands just tell CalyAI, and it's done.</p>
                 </div>
                 <a href="#final-cta" class="task-button">Get Early Access</a>
             </div>
@@ -715,8 +715,8 @@
         <div class="schedules-content">
             <div class="schedules-text">
                 <div class="schedules-info">
-                    <h2 class="schedules-title">Schedules, Invite, & Recap</h2>
-                    <p class="schedules-description">Whether its scheduling personal task, meeting with your team, recapping schedule for you, CalyAI got it covered.</p>
+                    <h2 class="schedules-title">Scheduling, Invites & Recaps — All in One Chat</h2>
+                    <p class="schedules-description">Whether you're planning your day, inviting your team, or getting a recap of your schedule, CalyAI handles it all in seconds — no app switching needed.</p>
                 </div>
                 <a href="#final-cta" class="schedules-button">Get Early Access</a>
             </div>
@@ -738,8 +738,8 @@
             </div>
             <div class="final-form">
                 <div class="final-form-row">
-                    <input type="email" id="final-email" class="final-email-input" placeholder="Type your email here" required>
-                    <button type="submit" class="final-submit-button" onclick="submitEmail('final-email', 'final-message')">Submit</button>
+                    <input type="email" id="final-email" class="final-email-input" placeholder="Enter your email to join early access." required>
+                    <button type="submit" class="final-submit-button" onclick="submitEmail('final-email', 'final-message')">Get Started</button>
                 </div>
                 <div id="final-message" class="message"></div>
             </div>
