--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
     </section>
 
     <!-- Blue Section - See CalyAI in Action -->
-    <section class="blue-section">
+    <!--<section class="blue-section">
         <div class="blue-content">
             <div class="blue-text">
                 <h2 class="blue-title">See CalyAI in Action!</h2>
@@ -687,9 +687,9 @@
             </div>
             <div class="demo-container">
                 <!-- Demo content will go here -->
-            </div>
+           <!-- </div>
         </div>
-    </section>
+    </section> 
 
     <!-- Task Reminders Section -->
     <section class="task-section">
