logo on links, browser tab

--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CalyAI - Your Personal Assistant for Scheduling</title>
+    <link rel="icon" type="image/jpeg" href="images/calyai-logo.jpg">
+
+     <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="CalyAI - Your Personal Assistant for Scheduling">
+    <meta property="og:description" content="CalyAI - Your Personal Assistant for Scheduling">
+    <meta property="og:image" content="https://calyai.xyz/images/calyai-logo.jpg">
+    <meta property="og:url" content="https://calyai.xyz">
+    <meta property="og:type" content="website">
+    
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="CalyAI - Your AI Personal Assistant for Scheduling">
+    <meta name="twitter:description" content="CalyAI - Your Personal Assistant for Scheduling">
+    <meta name="twitter:image" content="https://calyai.xyz/images/calyai-logo.jpg">
 
      <script async src="https://www.googletagmanager.com/gtag/js?id=G-2MGQGKZ4LR"></script>
     <script>
