--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CalyAI - Your Personal Assistant for Scheduling</title>
+    <title>Caly AI - Your AI Personal Assistant for Scheduling</title>
     <link rel="icon" type="image/jpeg" href="images/calyai-logo.jpg">
 
      <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="CalyAI - Your Personal Assistant for Scheduling">
-    <meta property="og:description" content="CalyAI - Your Personal Assistant for Scheduling">
+    <meta property="og:title" content="Caly AI - Your AI Personal Assistant for Scheduling">
+    <meta property="og:description" content="Manage your calendar by chat">
     <meta property="og:image" content="https://calyai.xyz/images/calyai-logo.jpg">
     <meta property="og:url" content="https://calyai.xyz">
     <meta property="og:type" content="website">
     
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="CalyAI - Your AI Personal Assistant for Scheduling">
-    <meta name="twitter:description" content="CalyAI - Your Personal Assistant for Scheduling">
+    <meta name="twitter:title" content="Caly AI - Your AI Personal Assistant for Scheduling">
+    <meta name="twitter:description" content="Manage your calendar by chat">
     <meta name="twitter:image" content="https://calyai.xyz/images/calyai-logo.jpg">
 
      <script async src="https://www.googletagmanager.com/gtag/js?id=G-2MGQGKZ4LR"></script>
@@ -79,8 +79,6 @@
         .logo {
             width: 76px;
             height: 100px;
-            background: url('https://placehold.co/76x100') no-repeat center;
-            background-size: contain;
         }
 
         .cta-button {
@@ -704,8 +702,8 @@
         <div class="hero-content">
             <div class="hero-left">
                 <div class="hero-text">
-                    <h1 class="hero-title">Let CalyAI Handle Your Scheduling</h1>
-                    <p class="hero-subtitle">Meetings, reminders, tasks, just type it once CalyAI handles the rest!</p>
+                    <h1 class="hero-title">Manage your calendar by chat</h1>
+                    <p class="hero-subtitle">Meetings, reminders, tasks, just chat Caly AI and its done!</p>
                 </div>
                 <div class="hero-form">
                     <div class="form-row">
@@ -718,7 +716,6 @@
             <div class="hero-right">
                 <video autoplay muted loop playsinline webkit-playsinline preload="auto">
                     <source src="images/calyai-demo.mp4" type="video/mp4">
-                    Your browser doesn't support video.
                 </video>
             </div>
         </div>
@@ -743,13 +740,12 @@
             <div class="task-video">
                 <video autoplay muted loop playsinline webkit-playsinline preload="auto">
                     <source src="images/calyai-task.mp4" type="video/mp4">
-                    Your browser doesn't support video.
                 </video>
             </div>
             <div class="task-text">
                 <div class="task-info">
                     <h2 class="task-title">Task Reminders - Never Miss a Thing!</h2>
-                    <p class="task-description">Whether it's hitting the gym, taking your meds, or running errands just tell CalyAI, and it's done.</p>
+                    <p class="task-description">Whether it's hitting the gym, taking your meds, or running errands just chat Caly AI, and it's done.</p>
                 </div>
                 <a href="#final-cta" class="task-button">Get Early Access</a>
             </div>
@@ -762,14 +758,13 @@
             <div class="schedules-text">
                 <div class="schedules-info">
                     <h2 class="schedules-title">Scheduling, Invites & Recaps — All in One Chat</h2>
-                    <p class="schedules-description">Whether you're planning your day, inviting your team, or getting a recap of your schedule, CalyAI handles it all in seconds — no app switching needed.</p>
+                    <p class="schedules-description">Whether you're planning your day, inviting your team, or getting a recap of your schedule, Caly AI handles it all in seconds by chat</p>
                 </div>
                 <a href="#final-cta" class="schedules-button">Get Early Access</a>
             </div>
             <div class="schedules-video">
                 <video autoplay muted loop playsinline webkit-playsinline preload="auto">
                     <source src="images/calyai-meeting.mp4" type="video/mp4">
-                    Your browser doesn't support video.
                 </video>
             </div>
         </div>
@@ -780,7 +775,7 @@
         <div class="final-content">
             <div class="final-text">
                 <h2 class="final-title">Get Your Early Access!</h2>
-                <p class="final-subtitle">Experience CalyAI Your AI Personal Assistant, Just One Chat Away!</p>
+                <p class="final-subtitle">Experience Caly AI Your AI Personal Assistant, Just One Chat Away!</p>
             </div>
             <div class="final-form">
                 <div class="final-form-row">
