update layout, copy (Positioning) 1

--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caly AI - Your AI Personal Assistant for Scheduling</title>
+    <title>Caly AI - Manage Your Calendar in Seconds by Chat!</title>
     <link rel="icon" type="image/jpeg" href="images/calyai-logo.jpg">
 
      <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Caly AI - Your AI Personal Assistant for Scheduling">
-    <meta property="og:description" content="Manage your calendar by chat">
+    <meta property="og:title" content="Caly AI - Manage Your Calendar in Seconds by Chat!">
+    <meta property="og:description" content="Caly AI - Manage Your Calendar in Seconds by Chat! Available in Telegram & Whatsapp (Coming Soon!)">
     <meta property="og:image" content="https://calyai.xyz/images/calyai-logo.jpg">
     <meta property="og:url" content="https://calyai.xyz">
     <meta property="og:type" content="website">
     
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Caly AI - Your AI Personal Assistant for Scheduling">
-    <meta name="twitter:description" content="Manage your calendar by chat">
+    <meta name="twitter:title" content="Caly AI - Manage Your Calendar in Seconds by Chat!">
+    <meta name="twitter:description" content="Caly AI - Manage Your Calendar in Seconds by Chat! Available in Telegram & Whatsapp (Coming Soon!)">
     <meta name="twitter:image" content="https://calyai.xyz/images/calyai-logo.jpg">
 
      <script async src="https://www.googletagmanager.com/gtag/js?id=G-2MGQGKZ4LR"></script>
@@ -702,8 +702,8 @@
         <div class="hero-content">
             <div class="hero-left">
                 <div class="hero-text">
-                    <h1 class="hero-title">Manage your calendar by chat</h1>
-                    <p class="hero-subtitle">Meetings, reminders, tasks, just chat Caly AI and its done!</p>
+                    <h1 class="hero-title">Schedule Anything In Seconds by Chat</h1>
+                    <p class="hero-subtitle">Just message Caly AI on Telegram / Whatsapp — it books meetings, adds reminders, and updates your calendar.</p>
                 </div>
                 <div class="hero-form">
                     <div class="form-row">
@@ -721,44 +721,13 @@
         </div>
     </section>
 
-    <!-- Blue Section - See CalyAI in Action -->
-    <!--<section class="blue-section">
-        <div class="blue-content">
-            <div class="blue-text">
-                <h2 class="blue-title">See CalyAI in Action!</h2>
-                <p class="blue-subtitle">Your AI Personal Assistant is one chat away!</p>
-            </div>
-            <div class="demo-container">
-                <!-- Demo content will go here -->
-           <!-- </div>
-        </div>
-    </section> -->
-
-    <!-- Task Reminders Section -->
-    <section class="task-section">
-        <div class="task-content">
-            <div class="task-video">
-                <video autoplay muted loop playsinline webkit-playsinline preload="auto">
-                    <source src="images/calyai-task.mp4" type="video/mp4">
-                </video>
-            </div>
-            <div class="task-text">
-                <div class="task-info">
-                    <h2 class="task-title">Task Reminders - Never Miss a Thing!</h2>
-                    <p class="task-description">Whether it's hitting the gym, taking your meds, or running errands just chat Caly AI, and it's done.</p>
-                </div>
-                <a href="#final-cta" class="task-button">Get Early Access</a>
-            </div>
-        </div>
-    </section>
-
     <!-- Schedules Section -->
     <section class="schedules-section">
         <div class="schedules-content">
             <div class="schedules-text">
                 <div class="schedules-info">
-                    <h2 class="schedules-title">Scheduling, Invites & Recaps — All in One Chat</h2>
-                    <p class="schedules-description">Whether you're planning your day, inviting your team, or getting a recap of your schedule, Caly AI handles it all in seconds by chat</p>
+                    <h2 class="schedules-title">Need to Schedule Meetings?</h2>
+                    <p class="schedules-description">Say “Discuss Budget tomorrow at 2PM, invite finance@gmail.com” it will send invites, create links, and update your calendar.</p>
                 </div>
                 <a href="#final-cta" class="schedules-button">Get Early Access</a>
             </div>
@@ -770,12 +739,30 @@
         </div>
     </section>
 
+    <!-- Task Reminders Section -->
+    <section class="task-section">
+        <div class="task-content">
+            <div class="task-video">
+                <video autoplay muted loop playsinline webkit-playsinline preload="auto">
+                    <source src="images/calyai-task.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="task-text">
+                <div class="task-info">
+                    <h2 class="task-title">Forgetful? It Handles Reminders Too</h2>
+                    <p class="task-description">From meds to workouts to random tasks, just chat Caly AI on Telegram / Whatsapp and it shows up in your calendar.</p>
+                </div>
+                <a href="#final-cta" class="task-button">Get Early Access</a>
+            </div>
+        </div>
+    </section>
+
     <!-- Final CTA Section -->
     <section class="final-cta" id="final-cta">
         <div class="final-content">
             <div class="final-text">
-                <h2 class="final-title">Get Your Early Access!</h2>
-                <p class="final-subtitle">Experience Caly AI Your AI Personal Assistant, Just One Chat Away!</p>
+                <h2 class="final-title">Ready to Organize Your Life?</h2>
+                <p class="final-subtitle">Start managing your calendar by chat using Caly AI on Telegram / Whatsapp!</p>
             </div>
             <div class="final-form">
                 <div class="final-form-row">
