--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
         .final-cta {
             width: 100%;
             padding: 100px 120px;
-            background: #2777F0;
+            background: white;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -494,20 +494,18 @@
         }
 
         .final-title {
-            color: white;
-            font-size: 48px;
+            color: black;
+            font-size: 36px;
             font-family: 'Lexend', sans-serif;
             font-weight: 700;
-            line-height: 60px;
-            text-align: center;
+            line-height: 45px;
         }
 
         .final-subtitle {
-            color: white;
+            color: black;
             font-size: 20px;
             font-weight: 400;
             line-height: 28.57px;
-            text-align: center;
         }
 
         .final-form {
@@ -543,11 +541,11 @@
 
         .final-submit-button {
             padding: 12px 18px;
-            background: white;
+            background: #2777F0;
             border: none;
             border-radius: 30px;
             box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
-            color: #2777F0;
+            color: white;
             font-size: 16px;
             font-weight: 600;
             line-height: 24px;
