--- a/index.html
+++ b/index.html
@@ -554,8 +554,9 @@
         }
 
         .final-submit-button:hover {
-            background: #f0f0f0;
-            transform: scale(1.05);
+            background: #1f5cbf;
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(39, 119, 240, 0.4);
         }
 
         .final-submit-button:disabled {
