--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
             object-fit: contain;
         }
 
-        /* Blue Section - See CalyAI in Action */
-        .blue-section {
+        /* No App Section */
+        .no-app-section {
             width: 100%;
             padding: 100px 120px;
             background: #2777F0;
@@ -240,7 +240,7 @@
             align-items: center;
         }
 
-        .blue-content {
+        .no-app-content {
             width: 100%;
             max-width: 1200px;
             display: flex;
@@ -249,14 +249,7 @@
             gap: 40px;
         }
 
-        .blue-text {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 20px;
-        }
-
-        .blue-title {
+        .no-app-title {
             color: white;
             font-size: 48px;
             font-family: 'Lexend', sans-serif;
@@ -265,23 +258,61 @@
             text-align: center;
         }
 
-        .blue-subtitle {
+        .no-app-subtitle {
             color: white;
             font-size: 20px;
             font-weight: 400;
             line-height: 28.57px;
             text-align: center;
+            max-width: 800px;
         }
 
-        .demo-container {
-            width: 100%;
-            max-width: 1200px;
-            height: 700px;
-            background: white;
-            border-radius: 60px;
-            position: relative;
-            overflow: hidden;
+        .platform-buttons {
+            display: flex;
+            gap: 20px;
+            align-items: center;
         }
+
+        .platform-button {
+            padding: 16px 32px;
+            background: white;
+            border: none;
+            border-radius: 50px;
+            color: #2777F0;
+            font-size: 16px;
+            font-weight: 600;
+            line-height: 24px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            text-decoration: none;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+        }
+
+        .platform-button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(255, 255, 255, 0.3);
+        }
+
+        .platform-button.whatsapp {
+            background: rgba(255, 255, 255, 0.2);
+            color: white;
+            cursor: default;
+            border: 2px solid rgba(255, 255, 255, 0.3);
+        }
+
+        .platform-button.whatsapp:hover {
+            transform: none;
+            box-shadow: none;
+        }
+
+        .platform-button svg {
+            width: 20px;
+            height: 20px;
+        }
+
 
         /* Task Reminders Section */
         .task-section {
@@ -716,6 +747,29 @@
                 <video autoplay muted loop playsinline webkit-playsinline preload="auto">
                     <source src="images/calyai-demo.mp4" type="video/mp4">
                 </video>
+            </div>
+        </div>
+    </section>
+
+    <!-- No App, Browser, Plugins Section -->
+    <section class="no-app-section">
+        <div class="no-app-content">
+            <h2 class="no-app-title">No App, Browser, Plugins</h2>
+            <p class="no-app-subtitle">Manage Your Calendar by Chat, Caly AI Is Now Available in</p>
+            <div class="platform-buttons">
+                <a href="#" class="platform-button telegram">
+                    <svg viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm5.568 8.16l-1.58 7.44c-.12.52-.44.65-.89.4l-2.46-1.81-1.18 1.14c-.13.13-.24.24-.5.24l.18-2.51 4.621-4.17c.2-.18-.043-.28-.31-.1L9.317 13.45l-2.49-.78c-.54-.17-.55-.54.12-.8l9.757-3.76c.45-.17.85.1.7.8z"/>
+                    </svg>
+                    Telegram
+                </a>
+                <div class="platform-button whatsapp">
+                    <svg viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893A11.821 11.821 0 0020.885 3.488"/>
+                    </svg>
+                    WhatsApp
+                    <span style="font-size: 12px; opacity: 0.8;">Coming soon!</span>
+                </div>
             </div>
         </div>
     </section>
