update meta title & icon

--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caly AI - Manage Your Calendar in Seconds by Chat!</title>
-    <link rel="icon" type="image/jpeg" href="images/calyai-logo.jpg">
+    <title>Caly AI - Schedule Anything in Seconds by Chat!</title>
+    <link rel="icon" type="image/jpeg" href="https://calyai.xyz/images/calyai-logo.jpg">
 
      <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Caly AI - Manage Your Calendar in Seconds by Chat!">
-    <meta property="og:description" content="Caly AI - Manage Your Calendar in Seconds by Chat! Available in Telegram & Whatsapp (Coming Soon!)">
+    <meta property="og:title" content="Caly AI - Schedule Anything in Seconds by Chat!">
+    <meta property="og:description" content="Caly AI - Schedule Anything in Seconds by Chat! Available in Telegram & Whatsapp (Coming Soon!)">
     <meta property="og:image" content="https://calyai.xyz/images/calyai-logo.jpg">
     <meta property="og:url" content="https://calyai.xyz">
     <meta property="og:type" content="website">
     
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Caly AI - Manage Your Calendar in Seconds by Chat!">
-    <meta name="twitter:description" content="Caly AI - Manage Your Calendar in Seconds by Chat! Available in Telegram & Whatsapp (Coming Soon!)">
+    <meta name="twitter:title" content="Caly AI - Schedule Anything in Seconds by Chat!">
+    <meta name="twitter:description" content="Caly AI - Schedule Anything in Seconds by Chat! Available in Telegram & Whatsapp (Coming Soon!)">
     <meta name="twitter:image" content="https://calyai.xyz/images/calyai-logo.jpg">
 
      <script async src="https://www.googletagmanager.com/gtag/js?id=G-2MGQGKZ4LR"></script>
